DPDSLParser.py
# Generated from DPDSL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DPDSLParser ( Parser ):

    grammarFileName = "DPDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'('", "'*'", "')'", "'['", "']'", 
                     "'+'", "'-'", "'/'", "'>'", "'<'", "'='", "'>='", "'<='", 
                     "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SELECT", "FROM", "WHERE", "GROUP", "BY", "AS", "OF", 
                      "PRIVATE", "PUBLIC", "SUM", "COUNT", "MAX", "AVG", 
                      "MIN", "ID", "INT", "FLOAT", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_query = 0
    RULE_select_clause = 1
    RULE_select_item = 2
    RULE_expression = 3
    RULE_from_clause = 4
    RULE_where_clause = 5
    RULE_group_by_clause = 6
    RULE_groupByColumn = 7
    RULE_label = 8
    RULE_function_name = 9
    RULE_operator = 10
    RULE_budget = 11
    RULE_identifier = 12

    ruleNames =  [ "query", "select_clause", "select_item", "expression", 
                   "from_clause", "where_clause", "group_by_clause", "groupByColumn", 
                   "label", "function_name", "operator", "budget", "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    SELECT=16
    FROM=17
    WHERE=18
    GROUP=19
    BY=20
    AS=21
    OF=22
    PRIVATE=23
    PUBLIC=24
    SUM=25
    COUNT=26
    MAX=27
    AVG=28
    MIN=29
    ID=30
    INT=31
    FLOAT=32
    WS=33
    LINE_COMMENT=34
    BLOCK_COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_clause(self):
            return self.getTypedRuleContext(DPDSLParser.Select_clauseContext,0)


        def EOF(self):
            return self.getToken(DPDSLParser.EOF, 0)

        def from_clause(self):
            return self.getTypedRuleContext(DPDSLParser.From_clauseContext,0)


        def group_by_clause(self):
            return self.getTypedRuleContext(DPDSLParser.Group_by_clauseContext,0)


        def where_clause(self):
            return self.getTypedRuleContext(DPDSLParser.Where_clauseContext,0)


        def getRuleIndex(self):
            return DPDSLParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = DPDSLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.select_clause()
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 27
                self.from_clause()


            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 30
                self.group_by_clause()


            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 33
                self.where_clause()


            self.state = 36
            self.match(DPDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(DPDSLParser.SELECT, 0)

        def select_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DPDSLParser.Select_itemContext)
            else:
                return self.getTypedRuleContext(DPDSLParser.Select_itemContext,i)


        def getRuleIndex(self):
            return DPDSLParser.RULE_select_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_clause" ):
                listener.enterSelect_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_clause" ):
                listener.exitSelect_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_clause" ):
                return visitor.visitSelect_clause(self)
            else:
                return visitor.visitChildren(self)




    def select_clause(self):

        localctx = DPDSLParser.Select_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_select_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(DPDSLParser.SELECT)
            self.state = 39
            self.select_item()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 40
                self.match(DPDSLParser.T__0)
                self.state = 41
                self.select_item()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(DPDSLParser.ExpressionContext,0)


        def identifier(self):
            return self.getTypedRuleContext(DPDSLParser.IdentifierContext,0)


        def AS(self):
            return self.getToken(DPDSLParser.AS, 0)

        def getRuleIndex(self):
            return DPDSLParser.RULE_select_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_item" ):
                listener.enterSelect_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_item" ):
                listener.exitSelect_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_item" ):
                return visitor.visitSelect_item(self)
            else:
                return visitor.visitChildren(self)




    def select_item(self):

        localctx = DPDSLParser.Select_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_select_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.expression(0)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21 or _la==30:
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 48
                    self.match(DPDSLParser.AS)


                self.state = 51
                self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DPDSLParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AggregationContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_name(self):
            return self.getTypedRuleContext(DPDSLParser.Function_nameContext,0)

        def expression(self):
            return self.getTypedRuleContext(DPDSLParser.ExpressionContext,0)

        def OF(self):
            return self.getToken(DPDSLParser.OF, 0)
        def budget(self):
            return self.getTypedRuleContext(DPDSLParser.BudgetContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregation" ):
                listener.enterAggregation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregation" ):
                listener.exitAggregation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregation" ):
                return visitor.visitAggregation(self)
            else:
                return visitor.visitChildren(self)


    class CountStarContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_name(self):
            return self.getTypedRuleContext(DPDSLParser.Function_nameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCountStar" ):
                listener.enterCountStar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCountStar" ):
                listener.exitCountStar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCountStar" ):
                return visitor.visitCountStar(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(DPDSLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class FloatLiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(DPDSLParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatLiteral" ):
                listener.enterFloatLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatLiteral" ):
                listener.exitFloatLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatLiteral" ):
                return visitor.visitFloatLiteral(self)
            else:
                return visitor.visitChildren(self)


    class LiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(DPDSLParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)


    class LabeledColumnContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def label(self):
            return self.getTypedRuleContext(DPDSLParser.LabelContext,0)

        def identifier(self):
            return self.getTypedRuleContext(DPDSLParser.IdentifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabeledColumn" ):
                listener.enterLabeledColumn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabeledColumn" ):
                listener.exitLabeledColumn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabeledColumn" ):
                return visitor.visitLabeledColumn(self)
            else:
                return visitor.visitChildren(self)


    class BinaryOpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DPDSLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(DPDSLParser.ExpressionContext,i)

        def operator(self):
            return self.getTypedRuleContext(DPDSLParser.OperatorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryOp" ):
                listener.enterBinaryOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryOp" ):
                listener.exitBinaryOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryOp" ):
                return visitor.visitBinaryOp(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DPDSLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = DPDSLParser.CountStarContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 55
                self.function_name()
                self.state = 56
                self.match(DPDSLParser.T__1)
                self.state = 57
                self.match(DPDSLParser.T__2)
                self.state = 58
                self.match(DPDSLParser.T__3)
                pass

            elif la_ == 2:
                localctx = DPDSLParser.AggregationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 60
                self.function_name()
                self.state = 61
                self.match(DPDSLParser.T__1)
                self.state = 62
                self.expression(0)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==22:
                    self.state = 63
                    self.match(DPDSLParser.OF)
                    self.state = 64
                    self.match(DPDSLParser.T__4)
                    self.state = 65
                    self.budget()
                    self.state = 66
                    self.match(DPDSLParser.T__5)


                self.state = 70
                self.match(DPDSLParser.T__3)
                pass

            elif la_ == 3:
                localctx = DPDSLParser.LabeledColumnContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.label()
                self.state = 73
                self.identifier()
                pass

            elif la_ == 4:
                localctx = DPDSLParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 75
                self.match(DPDSLParser.T__1)
                self.state = 76
                self.expression(0)
                self.state = 77
                self.match(DPDSLParser.T__3)
                pass

            elif la_ == 5:
                localctx = DPDSLParser.LiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 79
                self.match(DPDSLParser.INT)
                pass

            elif la_ == 6:
                localctx = DPDSLParser.FloatLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 80
                self.match(DPDSLParser.FLOAT)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DPDSLParser.BinaryOpContext(self, DPDSLParser.ExpressionContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 83
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 84
                    self.operator()
                    self.state = 85
                    self.expression(5) 
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class From_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(DPDSLParser.FROM, 0)

        def identifier(self):
            return self.getTypedRuleContext(DPDSLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return DPDSLParser.RULE_from_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_clause" ):
                listener.enterFrom_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_clause" ):
                listener.exitFrom_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_clause" ):
                return visitor.visitFrom_clause(self)
            else:
                return visitor.visitChildren(self)




    def from_clause(self):

        localctx = DPDSLParser.From_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_from_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(DPDSLParser.FROM)
            self.state = 93
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Where_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(DPDSLParser.WHERE, 0)

        def expression(self):
            return self.getTypedRuleContext(DPDSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DPDSLParser.RULE_where_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_clause" ):
                listener.enterWhere_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_clause" ):
                listener.exitWhere_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhere_clause" ):
                return visitor.visitWhere_clause(self)
            else:
                return visitor.visitChildren(self)




    def where_clause(self):

        localctx = DPDSLParser.Where_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_where_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(DPDSLParser.WHERE)
            self.state = 96
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Group_by_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(DPDSLParser.GROUP, 0)

        def BY(self):
            return self.getToken(DPDSLParser.BY, 0)

        def groupByColumn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DPDSLParser.GroupByColumnContext)
            else:
                return self.getTypedRuleContext(DPDSLParser.GroupByColumnContext,i)


        def getRuleIndex(self):
            return DPDSLParser.RULE_group_by_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroup_by_clause" ):
                listener.enterGroup_by_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroup_by_clause" ):
                listener.exitGroup_by_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroup_by_clause" ):
                return visitor.visitGroup_by_clause(self)
            else:
                return visitor.visitChildren(self)




    def group_by_clause(self):

        localctx = DPDSLParser.Group_by_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_group_by_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(DPDSLParser.GROUP)
            self.state = 99
            self.match(DPDSLParser.BY)
            self.state = 100
            self.groupByColumn()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 101
                self.match(DPDSLParser.T__0)
                self.state = 102
                self.groupByColumn()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupByColumnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(DPDSLParser.LabelContext,0)


        def identifier(self):
            return self.getTypedRuleContext(DPDSLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return DPDSLParser.RULE_groupByColumn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupByColumn" ):
                listener.enterGroupByColumn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupByColumn" ):
                listener.exitGroupByColumn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroupByColumn" ):
                return visitor.visitGroupByColumn(self)
            else:
                return visitor.visitChildren(self)




    def groupByColumn(self):

        localctx = DPDSLParser.GroupByColumnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_groupByColumn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.label()
            self.state = 109
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIVATE(self):
            return self.getToken(DPDSLParser.PRIVATE, 0)

        def PUBLIC(self):
            return self.getToken(DPDSLParser.PUBLIC, 0)

        def getRuleIndex(self):
            return DPDSLParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = DPDSLParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_label)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not(_la==23 or _la==24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUM(self):
            return self.getToken(DPDSLParser.SUM, 0)

        def COUNT(self):
            return self.getToken(DPDSLParser.COUNT, 0)

        def MAX(self):
            return self.getToken(DPDSLParser.MAX, 0)

        def AVG(self):
            return self.getToken(DPDSLParser.AVG, 0)

        def MIN(self):
            return self.getToken(DPDSLParser.MIN, 0)

        def getRuleIndex(self):
            return DPDSLParser.RULE_function_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_name" ):
                listener.enterFunction_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_name" ):
                listener.exitFunction_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_name" ):
                return visitor.visitFunction_name(self)
            else:
                return visitor.visitChildren(self)




    def function_name(self):

        localctx = DPDSLParser.Function_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1040187392) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DPDSLParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = DPDSLParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 65416) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BudgetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(DPDSLParser.FLOAT, 0)

        def INT(self):
            return self.getToken(DPDSLParser.INT, 0)

        def getRuleIndex(self):
            return DPDSLParser.RULE_budget

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBudget" ):
                listener.enterBudget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBudget" ):
                listener.exitBudget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBudget" ):
                return visitor.visitBudget(self)
            else:
                return visitor.visitChildren(self)




    def budget(self):

        localctx = DPDSLParser.BudgetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_budget)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not(_la==31 or _la==32):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DPDSLParser.ID, 0)

        def getRuleIndex(self):
            return DPDSLParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)
